--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>Ecosystem-game</artifactId>
+    <artifactId>spring-library</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Ecosystem-game</name>
     <description>Ecosystem-game</description>
