--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/lms
 spring.datasource.username=root
-#spring.datasource.password=mypassword
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update    
+
+spring.flyway.enabled=false
+
+
+spring.jpa.show-sql=true
