--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,13 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.flyway.enabled=false
+spring.flyway.enabled=true
+
+spring.flyway.locations=classpath:/db/migration
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+
 
 
 spring.jpa.show-sql=true
