--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
 spring.jpa.show-sql=true
+
+
+security.basic.enable: false
+security.ignored=/**
